force-app/main/default/objects/Lectures__c/Lectures__c.object-meta.xml
<CustomObject>
    <label>Lecture</label>
    <nameField>
        <label>Lectures Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lectures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>