force-app/main/default/objects/Lectures__c/fields/Additional_Resources__c.field-meta.xml
<CustomField>
    <fullName>Additional_Resources__c</fullName>
    <label>Additional Resources</label>
    <type>Url</type>
</CustomField>