force-app/main/default/objects/Lectures__c/fields/Date_Of__c.field-meta.xml
<CustomField>
    <fullName>Date_Of__c</fullName>
    <label>Date Of</label>
    <required>true</required>
    <type>Date</type>
</CustomField>