force-app/main/default/objects/Lectures__c/fields/Is_Ready__c.field-meta.xml
<CustomField>
    <fullName>Is_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Ready</label>
    <type>Checkbox</type>
</CustomField>