force-app/main/default/objects/Lectures__c/fields/Lecture_Code__c.field-meta.xml
<CustomField>
    <fullName>Lecture_Code__c</fullName>
    <displayFormat>L-{0000}</displayFormat>
    <label>Lecture Code</label>
    <type>AutoNumber</type>
</CustomField>