force-app/main/default/objects/Lectures__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lectures</relationshipLabel>
    <relationshipName>Lectures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>