force-app/main/default/objects/Lectures__c/fields/Time_of__c.field-meta.xml
<CustomField>
    <fullName>Time_of__c</fullName>
    <label>Time of</label>
    <type>Time</type>
</CustomField>